--- a/public/index.html
+++ b/public/index.html
@@ -2,88 +2,85 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Query Runner</title>
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src vscode-resource:; script-src vscode-resource:; style-src vscode-resource:;" /> -->
-  <link rel="stylesheet" href="__RESOURCE_DIR__/bulma.min.css" />
-  <link rel="stylesheet" href="__RESOURCE_DIR__/style.css" />
-  <script src="__RESOURCE_DIR__/vue.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Query Runner</title>
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src vscode-resource:; script-src vscode-resource:; style-src vscode-resource:;" /> -->
+    <link rel="stylesheet" href="__RESOURCE_DIR__/bulma.min.css" />
+    <link rel="stylesheet" href="__RESOURCE_DIR__/style.css" />
+    <link v-if="theme === 'light'" rel="stylesheet" href="__RESOURCE_DIR__/style-light.css" />
+    <link v-if="theme === 'dark'" rel="stylesheet" href="__RESOURCE_DIR__/style-dark.css" />
+
+    <script src="__RESOURCE_DIR__/vue.min.js"></script>
 </head>
 
 <body>
-  <div id="app">
-    <div id="button-container" class="container is-fluid">
-      <button class="button is-info"
-        v-if="queryStatus === 'none' || queryStatus === 'done' || queryStatus === 'error'"
-        @click="runAsQuery">Rerun Query</button>
-      <button class="button is-info" disabled v-if="queryStatus === 'runningAsQuery'">Running...</button>
-      <button class="button is-danger" v-if="queryStatus === 'runningAsQuery'" @click="cancelQuery">Cancel</button>
-      <button class="button is-info"
-        v-if="queryStatus === 'done' && hasPrev === 'true'"
-        @click="prevPage">Prev Page</button>
-      <button class="button is-info"
-        v-if="queryStatus === 'done' && hasNext === 'true'"
-        @click="nextPage">Next Page</button>
+    <div id="app">
+        <div id="button-container" class="container is-fluid">
+            <button class="button is-info" v-if="queryStatus === 'none' || queryStatus === 'done' || queryStatus === 'error'" @click="runAsQuery">Rerun Query</button>
+            <button class="button is-info" disabled v-if="queryStatus === 'runningAsQuery'">Running...</button>
+            <button class="button is-danger" v-if="queryStatus === 'runningAsQuery'" @click="cancelQuery">Cancel</button>
+            <button class="button is-info" v-if="queryStatus === 'done' && hasPrev === 'true'" @click="prevPage">Prev Page</button>
+            <button class="button is-info" v-if="queryStatus === 'done' && hasNext === 'true'" @click="nextPage">Next Page</button>
 
-      <span v-if="queryStatus === 'done'">(Elapsed time: {{elapsedTime}} sec., Processed Bytes:
+            <span v-if="queryStatus === 'done'">(Elapsed time: {{elapsedTime}} sec., Processed Bytes:
         {{(totalBytesProcessed / 1000000.0).toFixed(2)}} MB)</span>
-    </div>
-    <div v-if="queryStatus === 'error'">
-      <article class="message is-danger">
-        <div class="message-body">
-          <pre><code>{{ errorMessage }}</code></pre>
         </div>
-      </article>
+        <div v-if="queryStatus === 'error'">
+            <article class="message is-danger">
+                <div class="message-body">
+                    <pre><code>{{ errorMessage }}</code></pre>
+                </div>
+            </article>
+        </div>
+        <div>
+            <div class="tabs">
+                <ul>
+                    <li v-bind:class="{ 'is-active': activeTag === 'sql' }"><a @click="activeTag = 'sql'">SQL</a></li>
+                    <li v-bind:class="{ 'is-active': activeTag === 'info' }"><a @click="activeTag = 'info'">Info</a></li>
+                    <li v-bind:class="{ 'is-active': activeTag === 'table' }"><a @click="activeTag = 'table'">Table</a></li>
+                    <li v-bind:class="{ 'is-active': activeTag === 'detail' }"><a @click="activeTag = 'detail'">Detail</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="showtabs" v-if="activeTag === 'sql'">
+            <pre><code>{{ sql }}</code></pre>
+        </div>
+        <div v-if="activeTag === 'info'">
+            <div class="table-container">
+                <table class="table is-bordered is-striped is-narrow is-hoverable">
+                    <tbody>
+                        <tr v-for="(value, key) in info">
+                            <th>{{key}}</th>
+                            <td>{{value}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div v-if="activeTag === 'table'">
+            <div class="table-sticky-container">
+                <table class="table is-bordered is-striped is-narrow is-hoverable" v-if="table">
+                    <thead>
+                        <tr>
+                            <th>No.</th>
+                            <th v-for="value in table.headers">{{value}}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="(row, idx) in table.rows">
+                            <th>{{idx + startIndex + 1}}</th>
+                            <td v-for="value in row">{{displayValue(value)}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="showtabs" v-if="activeTag === 'detail'">
+            <pre><code>{{ detail }}</code></pre>
+        </div>
     </div>
-    <div>
-      <div class="tabs">
-        <ul>
-          <li v-bind:class="{ 'is-active': activeTag === 'sql' }"><a @click="activeTag = 'sql'">SQL</a></li>
-          <li v-bind:class="{ 'is-active': activeTag === 'info' }"><a @click="activeTag = 'info'">Info</a></li>
-          <li v-bind:class="{ 'is-active': activeTag === 'table' }"><a @click="activeTag = 'table'">Table</a></li>
-          <li v-bind:class="{ 'is-active': activeTag === 'detail' }"><a @click="activeTag = 'detail'">Detail</a></li>
-        </ul>
-      </div>
-    </div>
-    <div v-if="activeTag === 'sql'">
-      <pre><code>{{ sql }}</code></pre>
-    </div>
-    <div v-if="activeTag === 'info'">
-      <div class="table-container">
-        <table class="table is-bordered is-striped is-narrow is-hoverable">
-          <tbody>
-            <tr v-for="(value, key) in info">
-              <th>{{key}}</th>
-              <td>{{value}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <div v-if="activeTag === 'table'">
-      <div class="table-sticky-container">
-        <table class="table is-bordered is-striped is-narrow is-hoverable" v-if="table">
-          <thead>
-            <tr>
-              <th>No.</th>
-              <th v-for="value in table.headers">{{value}}</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr v-for="(row, idx) in table.rows">
-              <th>{{idx + startIndex + 1}}</th>
-              <td v-for="value in row">{{displayValue(value)}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <div v-if="activeTag === 'detail'">
-      <pre><code>{{ detail }}</code></pre>
-    </div>
-  </div>
-  <script src="__RESOURCE_DIR__/main.js"></script>
+    <script src="__RESOURCE_DIR__/main.js"></script>
 </body>
 
 </html>
