Inject theme during html render instead of vue rerender

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src vscode-resource:; script-src vscode-resource:; style-src vscode-resource:;" /> -->
     <link rel="stylesheet" href="__RESOURCE_DIR__/bulma.min.css" />
     <link rel="stylesheet" href="__RESOURCE_DIR__/style.css" />
-    <link v-if="theme === 'light'" rel="stylesheet" href="__RESOURCE_DIR__/style-light.css" />
-    <link v-if="theme === 'dark'" rel="stylesheet" href="__RESOURCE_DIR__/style-dark.css" />
+    <link rel="stylesheet" href="__RESOURCE_DIR__/style-__THEME__.css" />
 
     <script src="__RESOURCE_DIR__/vue.min.js"></script>
 </head>
